📝 content: obsidian commit

--- a/src/layouts/post.njk
+++ b/src/layouts/post.njk
@@ -12,7 +12,8 @@ layout: base-without-header.njk
 	</p>
 </header>
 {%- set tableOfContent = content | toc -%}
-{%- if tableOfContent.match(r/<li>/g).length > 2 -%}
+{{ content.length | dump }}
+{%- if tableOfContent.match(r/<li>/g).length > 2 and content.length > 3000 -%}
 	<aside class="[ toc-container ][ flow content-width ]">
 		<details>
 			<summary class="[ flex ]">
