📝 content: obsidian commit

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -14,7 +14,8 @@ eleventyNavigation:
     {% feedItem
     title = post.data.title,
     url = post.url,
-    excerpt = post.data.page.excerpt
+    excerpt = post.data.page.excerpt,
+    stage = note.data.stage
  %}
   {%- endfor %}
 </ul>
