--- a/src/projects.njk
+++ b/src/projects.njk
@@ -16,7 +16,8 @@ navToHtmlOptions:
     {% feedItem
     title = project.data.title,
     url = project.url,
-    excerpt = project.data.page.excerpt
+    excerpt = project.data.page.excerpt,
+    stage = ""
  %}
   {%- endfor %}
 </ul>
