📝 content: obsidian commit

--- a/src/bookmarks.njk
+++ b/src/bookmarks.njk
@@ -14,8 +14,7 @@ eleventyNavigation:
     {% feedItem
     title = bookmark.data.title,
     url = bookmark.url,
-    excerpt = bookmark.data.page.excerpt,
-    stage = ""
+    excerpt = bookmark.data.page.excerpt
  %}
   {%- endfor %}
 </ul>
