--- a/src/til.njk
+++ b/src/til.njk
@@ -16,8 +16,7 @@ eleventyNavigation:
     {% feedItem
     title = post.data.title,
     url = post.url,
-    excerpt = post.data.page.excerpt,
-    stage = ""
+    excerpt = post.data.page.excerpt
  %}
   {%- endfor %}
 </ul>
