--- a/src/projects.njk
+++ b/src/projects.njk
@@ -16,8 +16,7 @@ navToHtmlOptions:
     {% feedItem
     title = project.data.title,
     url = project.url,
-    excerpt = project.data.page.excerpt,
-    stage = ""
+    excerpt = project.data.page.excerpt
  %}
   {%- endfor %}
 </ul>
