--- a/src/garden.njk
+++ b/src/garden.njk
@@ -10,14 +10,46 @@ eleventyNavigation:
 
 <div id="graph"></div>
 
-{% set notes = collections.garden | reverse %}
-<ul class="[ flow ]">
-  {%- for note in notes %}
-    {% feedItem
+{%- set notes = collections.garden | reverse -%}
+{%- set seedlingCount = 0 -%}
+{%- set buddingCount = 0 -%}
+{%- set evergreenCount = 0 -%}
+
+{%- for note in notes -%}
+  {%- if note.data.stage === "seedling" -%}
+    {%- set seedlingCount = seedlingCount + 1 -%}
+  {%- elif note.data.stage === "budding" -%}
+    {%- set buddingCount = buddingCount + 1 -%}
+  {%- elif note.data.stage === "evergreen" -%}
+    {%- set evergreenCount = evergreenCount + 1 -%}
+  {%- endif -%}
+{%- endfor -%}
+
+<sl-select class="[ stage ]" placeholder="All growth stages" label="Select growth stages" multiple clearable>
+  <sl-menu-item value="seedling">
+    <sl-icon slot="prefix" class="[ emoji ]" library="fa" name="fas-seedling"></sl-icon>
+    Seedling
+    <sl-badge slot="suffix" variant="neutral" pill>{{ seedlingCount }}</sl-badge>
+  </sl-menu-item>
+  <sl-menu-item value="budding">
+    <sl-icon slot="prefix" class="[ emoji ]" library="fa" name="fas-spa"></sl-icon>
+    Budding
+    <sl-badge slot="suffix" variant="neutral" pill>{{ buddingCount }}</sl-badge>
+  </sl-menu-item>
+  <sl-menu-item value="evergreen">
+    <sl-icon slot="prefix" class="[ emoji ]" library="fa" name="fas-tree"></sl-icon>
+    Evergreen
+    <sl-badge slot="suffix" variant="neutral" pill>{{ evergreenCount }}</sl-badge>
+  </sl-menu-item>
+</sl-select>
+
+<ul class="[ feed ][ flow ]">
+  {%- for note in notes -%}
+    {%- feedItem
     title = note.data.title,
     url = note.url,
     excerpt = note.data.page.excerpt,
     stage = note.data.stage
- %}
-  {%- endfor %}
+    -%}
+  {%- endfor -%}
 </ul>
