--- a/src/garden.njk
+++ b/src/garden.njk
@@ -25,7 +25,7 @@ eleventyNavigation:
   {%- endif -%}
 {%- endfor -%}
 
-<sl-select class="[ stage ]" placeholder="All growth stages" label="Select growth stages" multiple clearable>
+<sl-select class="[ stage ]" placeholder="All growth stages" label="Filter by growth stage" size="large" multiple clearable>
   <sl-menu-item value="seedling">
     <sl-icon slot="prefix" class="[ emoji ]" library="fa" name="fas-seedling"></sl-icon>
     Seedling
