--- a/src/css/blocks/icon-button.css
+++ b/src/css/blocks/icon-button.css
@@ -19,7 +19,7 @@ sl-icon-button {
       outline-offset: 0px;
     }
 
-    @media (--motionOK) {
+    @media (prefers-reduced-motion: no-preference) {
       transition-property: color, outline-offset;
     }
   }
