--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -52,7 +52,7 @@
   --neutral-10: var(--black);
 
   /* Dark colour scale */
-  @media (--OSdark) {
+  @media (prefers-color-scheme: dark) {
     color-scheme: dark;
 
     --accent-0: var(--black);
