--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,6 +1,6 @@
 {% include "theme-switcher.njk" %}
 <header role="banner" class="site-head">
-	<div class="wrapper">
+	<div class="[ nav-wrapper ]">
 		{% include "navigation.njk" %}
 	</div>
 </header>
