--- a/src/css/blocks/button.css
+++ b/src/css/blocks/button.css
@@ -26,14 +26,9 @@
   padding-block: 0.75ch;
   padding-inline: 1.75ch;
   text-align: center;
-  transition: border-color 0.5s var(--ease-3) 3s;
+  transition: border-color 0.5s var(--ease-3) 3s, box-shadow 145ms var(--ease-4);
   user-select: none;
   line-height: 1;
-
-  @media (--motionOK) {
-    transition: border-color 0.5s var(--ease-3) 3s,
-      box-shadow 145ms var(--ease-4);
-  }
 }
 
 :where(button, button[type], input[type="button"], input[type="submit"], input[type="reset"])[disabled] {
@@ -42,7 +37,7 @@
   box-shadow: var(--shadow-1);
   cursor: not-allowed;
 
-  @media (--OSdark) {
+  @media (prefers-color-scheme: dark) {
     --_text: var(--gray-5);
   }
 }
@@ -78,7 +73,7 @@
     outline-color: var(--red-6);
   }
 
-  @media (--OSdark) {
+  @media (prefers-color-scheme: dark) {
     --_text: var(--red-2);
     --_border: var(--neutral-bg);
   }
@@ -105,7 +100,7 @@
   }
 }
 
-@media (--OSdark) {
+@media (prefers-color-scheme: dark) {
   :where([disabled]),
   :where([type="reset"]),
   :where([type="submit"]),
