--- a/src/css/blocks/lego.css
+++ b/src/css/blocks/lego.css
@@ -26,7 +26,7 @@
     transform: scale(1.2);
   }
 
-  @media (--md-n-above) {
+  @media (width >= 768px) {
     & > canvas {
       display: block;
       visibility: hidden;
