--- a/src/css/blocks/markdown-container.css
+++ b/src/css/blocks/markdown-container.css
@@ -1,5 +1,57 @@
 .markdown-container {
+  display: grid;
+  grid-template-columns: 1fr min(72ch, 100%) 1fr;
+
+  & > * {
+    grid-column: 2 / auto;
+  }
+
   & > :is(figure, picture) {
-    margin-inline: calc(var(--size-5) * -1);
+    max-inline-size: 100%;
+    margin-inline: auto;
+    text-align: center;
+    grid-column: 1 / 4;
+  }
+
+  & + .content-footer {
+    & > :is(.share, .postPagination) {
+      /* inline-size: min(72ch, 100%); */
+      inline-size: fit-content;
+      margin-inline: auto;
+      display: flex;
+      justify-content: center;
+      background-color: var(--accent-bg-subtle);
+      padding-inline: var(--size-8);
+      padding-block: var(--size-8);
+
+      @nest :is(&, &.share > p) {
+        max-inline-size: unset;
+        font-size: var(--font-size-fluid-1);
+      }
+
+      border-radius: var(--radius-3);
+      border-color: var(--accent-bg-hover);
+      border-width: var(--border-size-2);
+
+      --shadow-offset: var(--size-1);
+      box-shadow: var(--shadow-offset) var(--shadow-offset) 0 0
+        var(--accent-bg-hover);
+      transition: box-shadow 0.3s var(--ease-1), opacity 0.5s var(--ease-2);
+
+      &:is(:hover, :focus-within) {
+        --shadow-offset: var(--size-2);
+        transition: box-shadow 0.15s var(--ease-1);
+      }
+    }
+
+    & > .share {
+      padding-inline: var(--size-8);
+      padding-block: var(--size-8);
+    }
+
+    & > .postPagination {
+      padding-inline: var(--size-3);
+      padding-block: var(--size-3);
+    }
   }
 }
