--- a/src/css/blocks/newsletter.css
+++ b/src/css/blocks/newsletter.css
@@ -1,13 +1,61 @@
 .newsletter {
-  max-inline-size: var(--size-content-2);
+  margin-block-end: var(--size-10);
+  max-inline-size: 70ch;
+  margin-inline: auto;
+  background-color: var(--accent-bg-subtle);
+  border-color: var(--accent-bg-hover);
+  border-width: var(--border-size-2);
+  padding-inline: var(--size-8);
+  padding-block: var(--size-8);
+  border-radius: var(--radius-3);
+  --shadow-offset: var(--size-1);
+  border-radius: var(--radius-3);
+  box-shadow: var(--shadow-offset) var(--shadow-offset) 0 0
+    var(--accent-bg-hover);
+  transition: box-shadow 0.3s var(--ease-1), opacity 0.5s var(--ease-2);
+
+  &:is(:hover, :focus-within) {
+    --shadow-offset: var(--size-2);
+    transition: box-shadow 0.15s var(--ease-1);
+  }
 
   & fieldset {
     border: none;
     --flow-space: 1.5em;
 
-    & input {
-      font-size: var(--font-size-3);
-      line-height: calc(0.25rem + 1em + 0.25rem);
+    & > legend > h2 {
+      font-size: var(--font-size-fluid-2);
+    }
+
+    & > div {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-end;
+      justify-content: space-between;
+      gap: var(--size-6);
+      font-size: 1.5em;
+
+      & > * {
+        inline-size: 100%;
+      }
+
+      & > button {
+        block-size: fit-content;
+        margin-top: var(--size-3);
+      }
+
+      & label {
+        color: var(--neutral-5);
+        font-size: 0.75em;
+        font-weight: var(--font-weight-body-bold);
+        text-transform: uppercase;
+      }
+
+      & input {
+        padding-inline: 1ch;
+        padding-block: 0.75ch;
+        line-height: 1;
+      }
     }
   }
 }
