--- a/src/css/global.css
+++ b/src/css/global.css
@@ -153,7 +153,7 @@ var {
       filter: brightness(0.8);
     }
 
-    @media (--OSdark) {
+    @media (prefers-color-scheme: dark) {
       &:hover {
         filter: brightness(1.1);
       }
@@ -360,7 +360,7 @@ menu {
   outline-offset: var(--size-1);
 }
 
-@media (--motionOK) {
+@media (prefers-reduced-motion: no-preference) {
   :focus-visible {
     transition: outline-offset 145ms var(--ease-2);
   }
