--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,5 +1,9 @@
-<footer role="contentinfo" class="[ site-footer ]">
-	<css-doodle click-to-update aria-hidden="true">
+<footer role="contentinfo">
+
+	{% include "newsletter.njk" %}
+
+	<div class="[ site-footer ]">
+		<css-doodle click-to-update aria-hidden="true">
 		:doodle {
 			@grid: 20 / 100vw 100%;
 			background: var(--neutral-base);
@@ -12,61 +16,59 @@
 			font-size: 8vmin;
 		}
 	</css-doodle>
-	<div class="[ inner ] [ wrapper ]">
+		<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 100ch;">
 
-		{% include "newsletter.njk" %}
-
-		{% image
-		"./public/assets/img/coding.png",
-		"A digital drawing of me, a blonde woman in a white sweater with headphones on sitting at my desk in front of a keyboard and monitor coding."
+			{% image
+			"./public/assets/img/coding.png",
+			"A digital drawing of me, a blonde woman in a white sweater with headphones on sitting at my desk in front of a keyboard and monitor coding."
  %}
 
-		<div class="[ sitemap ] [ flow ]">
-			<h2>Sitemap</h2>
-			<ul class="[ flow ]">
-				{%- for collectionPage in collections.all | sortAlphabetically -%}
-					{%- if not collectionPage.data.excludeFromSitemap and collectionPage.data.eleventyNavigation.parent === undefined and collectionPage.url -%}
-						<li>
-							<a href="{{ collectionPage.url | url }}"{% if collectionPage.url === page.url %} aria-current="page"{% endif %}>
-								{{ collectionPage.data.title }}
-							</a>
-						</li>
-					{%- endif -%}
-				{%- endfor -%}
+			<div class="[ sitemap ] [ flow ]">
+				<h2>Sitemap</h2>
+				<ul class="[ flow ]">
+					{%- for collectionPage in collections.all | sortAlphabetically -%}
+						{%- if not collectionPage.data.excludeFromSitemap and collectionPage.data.eleventyNavigation.parent === undefined and collectionPage.url -%}
+							<li>
+								<a href="{{ collectionPage.url | url }}"{% if collectionPage.url === page.url %} aria-current="page"{% endif %}>
+									{{ collectionPage.data.title }}
+								</a>
+							</li>
+						{%- endif -%}
+					{%- endfor -%}
+				</ul>
+			</div>
+
+			<ul class="[ social-links ]">
+				<li>
+					<sl-tooltip content="Elly">
+						<sl-icon-button class="[ logo-link ]" src="/assets/svg/elly.svg" label="to homepage" href="/"{% if page.url === "/" %} aria-current="page"{% endif %}></sl-icon-button>
+					</sl-tooltip>
+				</li>
+				<li>
+					<sl-tooltip content="Twitter">
+						<sl-icon-button library="fa" name="fab-twitter" label="Twitter" href="https://elly.to/twitter"></sl-icon-button>
+					</sl-tooltip>
+				</li>
+				<li>
+					<sl-tooltip content="Linkedin">
+						<sl-icon-button library="fa" name="fab-linkedin" label="Linkedin" href="https://elly.to/linkedin"></sl-icon-button>
+					</sl-tooltip>
+				</li>
+				<li>
+					<sl-tooltip content="Codepen">
+						<sl-icon-button library="fa" name="fab-codepen" label="Codepen" href="https://elly.to/codepen"></sl-icon-button>
+					</sl-tooltip>
+				</li>
+				<li>
+					<sl-tooltip content="Dribbble">
+						<sl-icon-button library="fa" name="fab-dribbble" label="Dribbble" href="https://elly.to/dribbble"></sl-icon-button>
+					</sl-tooltip>
+				</li>
 			</ul>
-		</div>
 
-		<ul class="[ social-links ]">
-			<li>
-				<sl-tooltip content="Elly">
-					<sl-icon-button class="[ logo-link ]" src="/assets/svg/elly.svg" label="to homepage" href="/"{% if page.url === "/" %} aria-current="page"{% endif %}></sl-icon-button>
-				</sl-tooltip>
-			</li>
-			<li>
-				<sl-tooltip content="Twitter">
-					<sl-icon-button library="fa" name="fab-twitter" label="Twitter" href="https://elly.to/twitter"></sl-icon-button>
-				</sl-tooltip>
-			</li>
-			<li>
-				<sl-tooltip content="Linkedin">
-					<sl-icon-button library="fa" name="fab-linkedin" label="Linkedin" href="https://elly.to/linkedin"></sl-icon-button>
-				</sl-tooltip>
-			</li>
-			<li>
-				<sl-tooltip content="Codepen">
-					<sl-icon-button library="fa" name="fab-codepen" label="Codepen" href="https://elly.to/codepen"></sl-icon-button>
-				</sl-tooltip>
-			</li>
-			<li>
-				<sl-tooltip content="Dribbble">
-					<sl-icon-button library="fa" name="fab-dribbble" label="Dribbble" href="https://elly.to/dribbble"></sl-icon-button>
-				</sl-tooltip>
-			</li>
-		</ul>
-
-		<div class="[ gh-edit ]">
-			{% gh_edit page %}
+			<div class="[ gh-edit ]">
+				{% gh_edit page %}
+			</div>
 		</div>
 	</div>
-
 </footer>
