--- a/src/includes/navigation.njk
+++ b/src/includes/navigation.njk
@@ -6,11 +6,23 @@
 		</stylized-text>
 	</a>
 
-	<sl-icon-button
-		id="theme-switcher-open-button"
-		name="palette"
-		label="Open theme switcher"
-	></sl-icon-button>
+	<sl-tooltip content="Disable sounds">
+		<sl-icon-button
+			id="sound-button"
+			library="fa"
+			name="fas-volume-high"
+			label="Disable sounds"
+		></sl-icon-button>
+	</sl-tooltip>
+
+	<sl-tooltip content="Switch theme">
+		<sl-icon-button
+			id="theme-switcher-open-button"
+			library="fa"
+			name="fas-palette"
+			label="Open theme switcher"
+		></sl-icon-button>
+	</sl-tooltip>
 
 	<nav role="navigation" aria-label="Primary" class="[ nav ]">
 		{% set navPages = collections.all | eleventyNavigation %}
