--- a/src/css/utilities/wrapper.css
+++ b/src/css/utilities/wrapper.css
@@ -4,7 +4,7 @@
  * centers the contents
  */
 .wrapper {
-  max-inline-size: var(--wrapper-size, 72ch);
+  max-inline-size: var(--wrapper-size, var(--size-content-3));
   padding-inline: var(--size-4);
   margin-inline: auto;
   position: relative;
