--- a/src/includes/newsletter.njk
+++ b/src/includes/newsletter.njk
@@ -1,6 +1,6 @@
 <form class="[ newsletter ]" action="http://newsletter.ellyloel.com/add_subscriber" method="post" id="revue-form" name="revue-form">
-	<fieldset class="[ flow ]">
-		<legend>
+	<div class="[ flow ]">
+		<div>
 			<h2>Newsletter</h2>
 			<span>
 				Keep up to date with my <a href="/garden/">digital garden</a>, my <a href="/blog/">blog</a> posts, and anything else I'm working on, as well as gain access to newsletter exclusive content.
@@ -15,7 +15,7 @@
 					By subscribing, you agree with Revue’s <a href="https://www.getrevue.co/terms">Terms of Service</a> and <a href="https://www.getrevue.co/privacy">Privacy Policy</a>.
 				</em>
 			</small>
-		</legend>
+		</div>
 		<div>
 			<div class="[ flex flex-col ]">
 				<label for="member_first_name">Name</label>
@@ -27,5 +27,5 @@
 			</div>
 			<button name="member[subscribe]" id="member_submit">Subscribe</button>
 		</div>
-	</fieldset>
+	</div>
 </form>
